Added background image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
           <div id="title-div">
             <!--img src="img/joy.png"-->
-            <!--img src="img/vote.png"-->
+            <img src="img/aeternitypure.jpg">
             <h1>Predictor</h1>
 
             <div id="scoreframe">
